@startuml work-space
class TicTacToe {
    - game: Game | null = null;
    - submitButton: HTMLElement;
    - continueButton: HTMLElement;
    - resetButton: HTMLElement;
    - ultimateContinueButton: HTMLElement;
    - ultimateResetButton: HTMLElement;
    - nameBoard: HTMLElement;
    - mainContainer: HTMLElement;
    - ultimateContainer: HTMLElement;
    - ultimateCheckBox: HTMLInputElement;
    - ultimateNameSettingCheckBox: HTMLInputElement;
    - levelSelect: HTMLSelectElement;
    - cpuCheckBox: HTMLInputElement;
    - playerONameFormElement: HTMLInputElement;
    + init(): void
    - loadBoardNames(): void
    - submitName(e: Event): void
    - startGame(): void
    - _continueGame(): void
    - _resetGame(): void
    - createGame(): Game
    - gameModeChange(): void
    - handleUltimateCheckBox(changedCheckBox: HTMLInputElement): void
    - displayChange(showElement: HTMLElement | null, hideElement: HTMLElement): void
    - toggleElementVisibility(element: HTMLElement | null, isVisible: boolean): void
    - updateCPUCheck(): void
    - cpuLevelSelect(): string | null
}

class Game {
    - _players: { [key: string]: { name: string, mark: string, isCPU: string | null } };
    - _currentPlayer: { name: string, mark: string, isCPU: string | null };
    - _isCPUThinking: boolean = false;
    - _board: Board | UltimateBoard;
    - _scores: { [key: string]: number };
    - _winningMessageTextElement: HTMLElement;
    - _ultimateWinningMessageTextElement: HTMLElement;
    - ultimateMode: boolean;
    + initializeGame(): void
    + continueGame(): void
    + resetGame(): void
    + switchPlayer(): void
    - resetScores(): void
    - updateScores(isUltimateBoard: boolean = false): void
    - updateScoreBoardNames(isUltimateBoard: boolean = false): void
    - updatePlayerNamesForm(): void
    - handleClearBoard(): void
    - handleAddClick(): void
    - difficultyOfCPU(): void
    - playEasyCPU(): void
    - executeEasyCPUTurn(): void
    - ultimateBoardCPU(ultimateBoard: UltimateBoard): void
    - playNormalEasyCPUTurn(): void
    - hardModeCPU(): void
    - findBestMove(): number
    - minimax(depth: number, alpha: number, beta: number, isMaximizing: boolean): number
    + handleEndGame(draw: boolean, isUltimateBoard: boolean = false): void
    + saveGameStorage(): void
    - loadPlayBoard(boardSize: number): Board | UltimateBoard
}

class Board {
    private _game: Game;
    private _cells: { mark: string, element: HTMLElement, clickHandler?: (event: MouseEvent) => void }[];
    private _size: number;
    # winningCombinations: number[][];
    - generateWinningCombinations(size: number): number[][]
    # createCells(parentElement: HTMLElement): void
    - markCell(cellIndex: number, mark: string): void
    + checkWin(): boolean
    + checkDraw(): boolean
    + handleCellClick(index: number): void
    + getBoardState(): { mark: string }[]
    + setBoardState(state: { mark: string }[]): void
    - getBoardState(): { mark: string }[]
    - setBoardState(state: { mark: string}[]): void
    + getEmptyCells(): number[]
}

class UltimateBoard {
    + miniBoards: Board[];
    + currentBoardIndex: number | null;
    + miniBoardResult: string[];
    + parentElement: HTMLElement;
    - createUltimateBoards(size: number, parentElement: HTMLElement, game: Game): void
    + ultimateMarkCell(boardIndex: number, cellIndex: number, mark: string): void
    + ultimateCheckWin(): boolean
    + ultimateCheckDraw(): boolean
    + ultimateAddClickHandlers(): void
    + ultimateHandleCellClick(cellIndex: number, boardIndex: number)
    + clearUltimateBoard(): void
    - ultimateHandleEndGame(draw: boolean): void
    + getUltimateBoardState(): { mark: string }[][]
    + setUltimateBoardState(boards: { mark: string }[][]): void
}

TicTacToe --> Game : アソシエーション
Game <..> Board : 依存
UltimateBoard --|> Board : 継承

@enduml
